# marrow

./: .gitignore  AGENTS.md  BND02-DESIGN.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  G00b-DEMAND-LEDGER.md  LANE_CORE-F1_MAP.md  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  bare_param.mw  colon_no_ret.mw  no_annot.mw
crates/marrow/: AGENTS.md  Cargo.toml
crates/marrow-catalog/: AGENTS.md  Cargo.toml
crates/marrow-catalog/src/: lib.rs
crates/marrow-catalog/tests/: main.rs  metadata_json.rs
crates/marrow-check/: AGENTS.md  Cargo.toml
crates/marrow-check/src/: analysis.rs  annotation_refs.rs  backing_validity.rs  binding.rs  catalog.rs  checks.rs  commit.rs  data_text.rs  diagnostic_render.rs  diagnostics.rs  driver.rs  durable_path.rs  entry_abi.rs  enums.rs  evolution.rs  executable.rs  facts.rs  hex.rs  infer.rs  keyed_entries.rs  lib.rs  presence.rs  program.rs  project_io.rs  prototype.rs  rejected_surface.rs  resolve.rs  rules.rs  source_spans.rs  surface.rs  surface_abi.rs  test_support.rs  typerules.rs  walk.rs
crates/marrow-check/tests/: analysis_api.rs  binding_enum_annotations.rs  binding_enum_member_literals.rs  binding_index.rs  binding_match_arm_dispatch.rs  binding_name_resolution.rs  binding_rename_safety.rs  binding_resource_constructors.rs  catalog_presence.rs  catalog_presence_binding.rs  catalog_presence_enum.rs  catalog_presence_evolve.rs  catalog_presence_format.rs  catalog_presence_identity.rs  catalog_presence_narrowing.rs  catalog_presence_provider.rs  checked_program.rs  checked_program_artifact.rs  checked_program_error_construct.rs  checked_program_error_value.rs  checked_program_facts.rs  checked_program_identity.rs  checked_program_keys.rs  checked_program_navigation.rs  checked_program_operators.rs  checked_program_stdlib.rs  commit_amplification.rs  cross_module_map_enum_identity.rs  discharge_defaults.rs  discharge_digest.rs  discharge_enum.rs  discharge_index.rs  discharge_keyed_layer_shape.rs  discharge_leaf_reshape.rs  discharge_nested.rs  discharge_required_leaf_presence.rs  discharge_retype.rs  discharge_store_key.rs  discharge_structural_backstop.rs  discharge_transform.rs  (+37 more)
crates/marrow-codes/: AGENTS.md  Cargo.toml
crates/marrow-codes/src/: docs.rs  lib.rs
crates/marrow-codes/tests/: error_codes_doc.rs  tidy.rs
crates/marrow-compile/: Cargo.toml  clippy.toml
crates/marrow-compile/src/: analysis.rs  compile.rs  demand.rs  diag.rs  durable.rs  generic_scaling_counts_tests.rs  konst.rs  lib.rs  lower.rs  lower_metadata_successor_tests.rs  record.rs  scalar.rs  types.rs  types_metadata_successor_tests.rs
crates/marrow-compile/tests/: active_call.rs  bracket_lookup.rs  completions.rs  diagnostic_file_identity.rs  diagnostic_full_span.rs  document_symbols.rs  format_query.rs  generics.rs  hover_facts.rs  int_bounds.rs  lowering_diagnostics_not_panics.rs  lowering_panic_audit.rs  multi_resource.rs  require_guard.rs  resource_limits.rs  root_admission_steering.rs  snapshot_agreement.rs  transaction_ownership.rs  wide_resource.rs
crates/marrow-image/: Cargo.toml
crates/marrow-image/src/: bounds.rs  ceiling.rs  demand.rs  digest.rs  draft.rs  durable_id.rs  encode.rs  export_id.rs  instr.rs  interface.rs  lib.rs  semantic.rs  store_digest.rs  ty.rs
crates/marrow-image/tests/: bound_boundaries.rs
crates/marrow-json/: AGENTS.md  Cargo.toml
crates/marrow-json/src/: lib.rs  resource_schema.rs  run.rs  saved_data.rs  serve.rs  surface.rs
crates/marrow-json/tests/: cursor_token.rs
crates/marrow-kernel/: Cargo.toml
crates/marrow-kernel/src/: equality.rs  lib.rs
crates/marrow-kernel/tests/: codec_encoding.rs  commit_poison.rs  engine_call_witness.rs  exact_field_work.rs  index_read.rs  native_temporal_restart.rs  one_cell_topology_owner.rs  op_trace_differential.rs  wide_entry_read.rs  widened_value_differential.rs
crates/marrow-lifecycle/: Cargo.toml
crates/marrow-lifecycle/src/: actor.rs  authority.rs  codec.rs  durable_fs.rs  envelope.rs  head.rs  headmap.rs  image.rs  import.rs  instance.rs  lib.rs  lock.rs  provision.rs  reopen.rs  report.rs  slice.rs  store_dir.rs
crates/marrow-lifecycle/tests/: actor_lifecycle.rs  authority_intersection_audit.rs  ceiling_admission.rs  commit_outcome.rs  import_bulk.rs  provision_approval.rs  provision_lifecycle.rs
crates/marrow-lsp/: AGENTS.md  Cargo.toml
crates/marrow-lsp/src/: analysis.rs  capacities.rs  credit.rs  document.rs  facts.rs  lib.rs  lifecycle.rs  outbound.rs  position.rs  protocol.rs  server.rs  transport.rs  uri.rs
crates/marrow-project/: AGENTS.md  Cargo.toml
crates/marrow-project-fs/: Cargo.toml
crates/marrow-project-fs/src/: capture.rs  failure.rs  kats.rs  lib.rs  limits.rs  overlay.rs  path.rs  presentation.rs
crates/marrow-project-fs/tests/: consumer.rs  metadata_gate.rs  public_api.rs
crates/marrow-project/src/: capture.rs  digest.rs  identity.rs  ids.rs  lib.rs  manifest.rs
crates/marrow-project/tests/: config.rs  discovery.rs  main.rs  modules.rs
crates/marrow-run/: AGENTS.md  Cargo.toml
crates/marrow-run/src/: activation.rs  admission.rs  base64.rs  call.rs  call_args.rs  collection.rs  debugger.rs  durable_read.rs  entry.rs  entry_digest.rs  env.rs  error.rs  exec.rs  expr.rs  group_write.rs  hex.rs  host.rs  host_effects.rs  index_maintenance.rs  lib.rs  local_collection.rs  loop_exec.rs  neighbor.rs  path.rs  percent.rs  project_session.rs  range_expr.rs  read.rs  saved_iter.rs  schema_query.rs  statement.rs  std_audit.rs  std_csv.rs  std_error_helpers.rs  std_hash.rs  std_id.rs  std_json.rs  std_matrix.rs  std_pure.rs  std_random.rs  (+9 more)
crates/marrow-run/tests/: architecture.rs  commit_id_conformance.rs  contract_composite_partial_key.rs  contract_post_delete_index_counts.rs  contract_read_only_closure.rs  contract_saved_data.rs  entry_args.rs  (+64 more)
crates/marrow-runner/: Cargo.toml
crates/marrow-schema/: AGENTS.md  Cargo.toml
crates/marrow-store/: AGENTS.md  Cargo.toml
crates/marrow-temporal/: Cargo.toml
crates/marrow-verify/: Cargo.toml
crates/marrow-vm/: Cargo.toml
crates/marrow-write/: Cargo.toml
(+1216 files in other folders)
