[workspace]
resolver = "2"
members = [
    "crates/marrow",
    "crates/marrow-codes",
    "crates/marrow-compile",
    "crates/marrow-image",
    "crates/marrow-verify",
    "crates/marrow-vm",
    "crates/marrow-project",
    "crates/marrow-store",
    "crates/marrow-syntax",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/scottswilliams/marrow"
authors = ["Marrow contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
