[workspace]
resolver = "2"
members = [
    "crates/marrow",
    "crates/marrow-codes",
    "crates/marrow-compile",
    "crates/marrow-image",
    "crates/marrow-kernel",
    "crates/marrow-local-wire",
    "crates/marrow-runner",
    "crates/marrow-verify",
    "crates/marrow-vm",
    "crates/marrow-project",
    "crates/marrow-store",
    "crates/marrow-syntax",
    "crates/marrow-temporal",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/scottswilliams/marrow"
authors = ["Marrow contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
# A decode/dispatch `match` arm whose right-hand constant is not in scope is silently
# read as an irrefutable binding that swallows later arms (the CR01 opcode regression).
# Denying these turns that class into an ordinary build failure, not a clippy-only one.
unreachable_patterns = "deny"
unused_variables = "deny"
