[package]
name = "marrow-catalog"
description = "Marrow accepted catalog semantic model."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.11", default-features = false }

[lints]
workspace = true
