[package]
name = "marrow-check"
description = "Resolves and checks a Marrow project's source."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
# Exposes `marrow_check::test_support`, the shared owner of the fact-lookup family the
# downstream evolution/runtime/CLI test suites query. Test-only and off by default, so
# normal and release builds never carry it; it pulls in no extra dependency.
test-support = []

[dependencies]
marrow-codes = { path = "../marrow-codes" }
marrow-syntax = { path = "../marrow-syntax" }
marrow-catalog = { path = "../marrow-catalog" }
marrow-project = { path = "../marrow-project" }
marrow-schema = { path = "../marrow-schema" }
# Default features only: the canonical scalar type, not the native backend.
marrow-store = { path = "../marrow-store" }

[lints]
workspace = true

[dev-dependencies]
marrow-check = { path = ".", features = ["test-support"] }
