[package]
name = "marrow-compile"
description = "The storeless Marrow compiler slice: the subset checker, the language scalar vocabulary, and lowering to the program-image draft."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
marrow-codes = { path = "../marrow-codes" }
marrow-image = { path = "../marrow-image" }
marrow-project = { path = "../marrow-project" }
marrow-syntax = { path = "../marrow-syntax" }
marrow-temporal = { path = "../marrow-temporal" }

[lints]
workspace = true
