[package]
name = "marrow-json"
description = "Marrow JSON rendering for CLI surfaces, tooling keys, data stamps, and surface read DTOs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
marrow-codes = { path = "../marrow-codes" }
base64ct = { version = "1.8.3", features = ["alloc"] }
chacha20poly1305 = "0.11.0"
marrow-check = { path = "../marrow-check" }
marrow-project = { path = "../marrow-project" }
marrow-run = { path = "../marrow-run" }
marrow-store = { path = "../marrow-store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
