[package]
name = "marrow-kernel"
description = "Marrow's path kernel: durable operation algebra and runtime logical codecs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
marrow-codes = { path = "../marrow-codes" }
marrow-store = { path = "../marrow-store", features = ["native"] }
marrow-temporal = { path = "../marrow-temporal" }

[dev-dependencies]
# Already a normal in-workspace dependency; also needed by name in the widened-value
# differential integration test for the canonical instant year-range bounds.
marrow-temporal = { path = "../marrow-temporal" }

[lints]
workspace = true
