[package]
name = "marrow-project"
description = "Marrow project configuration (marrow.json)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
marrow-codes = { path = "../marrow-codes" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.11", default-features = false }

[lints]
workspace = true
