[package]
name = "marrow-project"
description = "Pure Marrow project-input owner: manifest schema, contained discovery, and the immutable ProjectInput."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
marrow-codes = { path = "../marrow-codes" }
toml = { version = "1", default-features = false, features = ["parse", "serde"] }

[lints]
workspace = true
