[package]
name = "marrow-run"
description = "Evaluates checked Marrow functions against local values and saved data."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
marrow-check = { path = "../marrow-check" }
marrow-schema = { path = "../marrow-schema" }
marrow-store = { path = "../marrow-store" }
marrow-syntax = { path = "../marrow-syntax" }
sha2 = { version = "0.11", default-features = false }

[dev-dependencies]
# Tests run the reference sample against the native (redb) backend too.
marrow-store = { path = "../marrow-store", features = ["native"] }
tempfile = "3"

[lints]
workspace = true
