[package]
name = "marrow-schema"
description = "Compiles parsed Marrow resources into typed-tree schemas."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
marrow-codes = { path = "../marrow-codes" }
marrow-syntax = { path = "../marrow-syntax" }
# Default features only: this brings in the canonical scalar type and codec, not
# the native (redb) backend behind the off-by-default `native` feature.
marrow-store = { path = "../marrow-store" }

[lints]
workspace = true
