[package]
name = "marrow-store"
description = "Marrow's saved-tree encoding and backend contract."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
marrow-codes = { path = "../marrow-codes" }
redb = { version = "4", optional = true }

[features]
# The native persistent backend (redb). Off by default so the in-memory store
# and encoding stay dependency-light; the CLI enables it.
native = ["dep:redb"]

[lints]
workspace = true
