[package]
name = "marrow-temporal"
description = "The pure temporal scalar domain: proleptic-Gregorian calendar, canonical date/instant/duration text codec, and the closed temporal arithmetic floor. No clock, store, or image dependency."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

[lints]
workspace = true
