[package]
name = "marrow"
description = "The Marrow command-line interface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "marrow"
path = "src/main.rs"

[dependencies]
marrow-codes = { path = "../marrow-codes" }
marrow-compile = { path = "../marrow-compile" }
marrow-kernel = { path = "../marrow-kernel" }
marrow-project = { path = "../marrow-project" }
marrow-syntax = { path = "../marrow-syntax" }
marrow-temporal = { path = "../marrow-temporal" }
marrow-verify = { path = "../marrow-verify" }
marrow-vm = { path = "../marrow-vm" }

[lints]
workspace = true
