[package]
name = "marrow"
description = "The Marrow command-line interface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "marrow"
path = "src/main.rs"

[dependencies]
marrow-codes = { path = "../marrow-codes" }
marrow-compile = { path = "../marrow-compile" }
# The wire interface descriptor/`InterfaceId` owner: `marrow client typescript`
# projects a verified image's interface through it and generates the client.
marrow-image = { path = "../marrow-image" }
marrow-kernel = { path = "../marrow-kernel" }
# The in-tree language server, dispatched as `marrow lsp`.
marrow-lsp = { path = "../marrow-lsp" }
marrow-project = { path = "../marrow-project" }
# The local-wire process/socket owner: the terminal spawns a release-verified companion
# runner through it for a persistent `marrow run --store`, builds the call's JSON arguments
# through its re-exported wire `Json`, and renders the returned value.
marrow-runner = { path = "../marrow-runner" }
marrow-project-fs = { path = "../marrow-project-fs" }
marrow-syntax = { path = "../marrow-syntax" }
marrow-temporal = { path = "../marrow-temporal" }
marrow-verify = { path = "../marrow-verify" }
marrow-vm = { path = "../marrow-vm" }

[dev-dependencies]
# The raw JSON-RPC client for the `tests/lsp_stdio.rs` production probes. A dev-only,
# std-only edge that shares the resolved package node but not the production LSP
# feature tuple, and gains no serde/lsp-types/transport edge.
serde_json = { version = "=1.0.150", default-features = false, features = ["std"] }

[lints]
workspace = true
